--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,6 +13,12 @@ Global:
     username: "root"
     password: ""
 
+Naughty:
+  Words:
+    - "nigger"
+    - "nigga"
+    -
+
 Sumo:
   Lobby:
     x: 0
